--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
+    "@szhsin/react-menu": "^4.0.3",
     "@types/three": "^0.156.0",
+    "framer-motion": "^10.16.4",
+    "leva": "^0.9.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
     "three": "^0.156.1"
   },
