--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
-    "three": "^0.156.1"
+    "three": "^0.156.1",
+    "vite-plugin-glsl": "^1.1.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.34.1",
