--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@szhsin/react-menu": "^4.0.3",
     "@types/three": "^0.156.0",
     "framer-motion": "^10.16.4",
+    "framer-motion-3d": "^10.16.4",
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
