--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
+    "@react-three/postprocessing": "2.14",
     "@szhsin/react-menu": "^4.0.3",
     "@types/three": "^0.156.0",
     "framer-motion": "^10.16.4",
     "framer-motion-3d": "^10.16.4",
     "leva": "^0.9.35",
+    "postprocessing": "^6.33.1",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
