--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.83.9",
     "@react-three/fiber": "^8.14.1",
     "@react-three/postprocessing": "2.14",
+    "@react-three/rapier": "1.0",
     "@szhsin/react-menu": "^4.0.3",
     "@types/three": "^0.156.0",
     "framer-motion": "^10.16.4",
@@ -22,6 +23,7 @@
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
