--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
     "three": "^0.156.1",
+    "use-elapsed-time": "^3.0.4",
     "vite-plugin-glsl": "^1.1.2"
   },
   "devDependencies": {
