--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/three": "^0.156.0",
     "framer-motion": "^10.16.4",
     "framer-motion-3d": "^10.16.4",
+    "gsap": "^3.12.2",
     "leva": "^0.9.35",
     "postprocessing": "^6.33.1",
     "r3f-perf": "^7.1.2",
