--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/drei": "^9.83.9",
-    "@react-three/fiber": "^8.14.1",
+    "@react-three/fiber": "^8.14.4",
     "@react-three/postprocessing": "2.14",
     "@react-three/rapier": "1.0",
     "@szhsin/react-menu": "^4.0.3",
-    "@types/three": "^0.156.0",
+    "@theatre/core": "^0.7.0",
+    "@theatre/r3f": "^0.7.0",
+    "@theatre/studio": "^0.7.0",
     "framer-motion": "^10.16.4",
     "framer-motion-3d": "^10.16.4",
     "gsap": "^3.12.2",
@@ -38,6 +40,7 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.156.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
