--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recoil": "^0.7.7",
     "three": "^0.156.1",
     "use-elapsed-time": "^3.0.4",
+    "uuid": "^9.0.1",
     "vite-plugin-glsl": "^1.1.2"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.156.0",
+    "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
