texture example from substance painter and blender

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --force --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -24,17 +24,20 @@
     "framer-motion-3d": "^10.16.4",
     "gsap": "^3.12.2",
     "leva": "^0.9.35",
+    "maath": "^0.10.4",
     "postprocessing": "^6.33.1",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-howler": "^5.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "recoil": "^0.7.7",
     "splitting": "^1.0.6",
     "three": "^0.156.1",
     "use-elapsed-time": "^3.0.4",
+    "use-sound": "^4.0.1",
     "uuid": "^9.0.1",
     "vite-plugin-glsl": "^1.1.2"
   },
@@ -44,6 +47,7 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-howler": "^5.2.2",
     "@types/splitting": "^1.0.3",
     "@types/three": "^0.156.0",
     "@types/uuid": "^9.0.5",
